Refactor:테스트에서 발견된 ohlcv로직 변경(List를 reverse를 하여 시작가 종가를 찾았으나 불필요한 방법인거같아 수정)